# typix

./: Cargo.toml  LICENSE  README.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: release.yml  version.yml
src/: input.rs  main.rs  pixela.rs
