[package]
name = "typix"
version = "0.0.1"
authors = ["Hiroki Sakuraba <feath.7615@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs = "0.3.0"
structopt = "0.3"
glob = "0.3.0"
anyhow = "1.0"
env_logger = "0.7"
log = "0.4"
nix = "0.13"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
toml = "0.5"
serde = { version = "1.0.114", features = ["derive"] }
directories = "3.0"
